--- a/.github/workflows/AzureBuildDeployContainerApp.yml
+++ b/.github/workflows/AzureBuildDeployContainerApp.yml
@@ -43,9 +43,9 @@ jobs:
 
     - uses: azure/docker-login@v1
       with:
-        login-server: cloudquickstartregistry.azurecr.io
+        login-server: githubpock8s.azurecr.io
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build . -t cloudquickstartregistry.azurecr.io/myapp:1.0.0
-        docker push cloudquickstartregistry.azurecr.io/myapp:1.0.0
+        docker build . -t githubpock8s.azurecr.io/myapp:1.0.0
+        docker push githubpock8s.azurecr.io/myapp:1.0.0
