--- a/.github/workflows/AzureBuildDeployContainerApp.yml
+++ b/.github/workflows/AzureBuildDeployContainerApp.yml
@@ -2,7 +2,10 @@
 name: Build and Deploy Container App
 
 on:
-  workflow_dispatch:
+  push:
+    branches:
+      - main  # Change this to your default branch name if different
+
 
 jobs:
   build:
